@@ -708,7 +708,7 @@ rake coverage          # Test code covarage with RCov
 rake doc               # Generate all documentation
 rake first_commit      # Perform the 1st (main) Git commit
 rake flay              # Check for duplicated code with Flay
-rake gem               # Build the gem file olag-0.1.2.gem
+rake gem               # Build the gem file olag-&lt;version&gt;.gem
 rake package           # Build all the packages
 rake rdoc              # Build the rdoc HTML Files
 rake reek              # Check for smelly code with Reek
@@ -745,7 +745,7 @@ spec = <span class="Type">Gem</span>::<span class="Type">Specification</span>.ne
   spec.version = <span class="Type">Olag</span>::<span class="Type">VERSION</span>
   spec.author = <span class="Special">&quot;</span><span class="Constant">Oren Ben-Kiki</span><span class="Special">&quot;</span>
   spec.email = <span class="Special">&quot;</span><span class="Constant">rubygems-oren@ben-kiki.org</span><span class="Special">&quot;</span>
-  spec.homepage = <span class="Special">&quot;</span><span class="Constant"><a href="http://olag.rubygems.org">http://olag.rubygems.org</a></span><span class="Special">&quot;</span>
+  spec.homepage = <span class="Special">&quot;</span><span class="Constant"><a href="https://rubygems.org/gems/olag">https://rubygems.org/gems/olag</a></span><span class="Special">&quot;</span>
   spec.summary = <span class="Special">&quot;</span><span class="Constant">Olag - Oren's Library/Application Gem framework</span><span class="Special">&quot;</span>
   spec.description = (&lt;&lt;-<span class="Special">EOF</span>).gsub(<span class="Special">/</span><span class="Special">^</span><span class="Special">\s</span><span class="Special">+</span><span class="Special">/</span>, <span class="Special">&quot;&quot;</span>).chomp.gsub(<span class="Special">&quot;</span><span class="Special">\n</span><span class="Special">&quot;</span>, <span class="Special">&quot;</span><span class="Constant"> </span><span class="Special">&quot;</span>)
 <span class="Constant">    Olag is Oren's set of utilities for creating a well-behaved gem. This is</span>
@@ -1995,7 +1995,7 @@ number of Git commits by running <tt>rake version</tt>.
 </tr>
 </table>
 <pre class='ruby code syntax'>
-  <span class="Type">VERSION</span> = <span class="Special">&quot;</span><span class="Constant">0.1.7</span><span class="Special">&quot;</span>
+  <span class="Type">VERSION</span> = <span class="Special">&quot;</span><span class="Constant">0.1.8</span><span class="Special">&quot;</span>
 
 end
 </pre>
