@@ -1,5 +1,6 @@
 2011-04-22	Oren Ben-Kiki <github-oren@ben-kiki.org>
 
+	* Fix homepage specification.
 	* Fix version handling and other issues.
 
 2011-04-19	Oren Ben-Kiki <github-oren@ben-kiki.org>
